--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -20,6 +20,9 @@ gem "puma", ">= 5.0"
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ mswin mswin64 mingw x64_mingw jruby ]
 
+gem "devise"
+gem "jwt"
+gem "rack-cors"
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
