--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -39,6 +39,8 @@ group :development, :test do
   # Testing framework [https://rspec.info/]
   gem "rspec-rails"
 
+  gem 'shoulda-matchers', '~> 6.0'
+
   # Test data factories [https://github.com/thoughtbot/factory_bot_rails]
   gem "factory_bot_rails"
 
