--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -33,6 +33,8 @@ gem "bootsnap", require: false
 # gem "rack-cors"
 gem "pry"
 
+gem "stripe"
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mswin mswin64 mingw x64_mingw ], require: "debug/prelude"
